--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.10.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -13,6 +14,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.45.2",
     "web-vitals": "^1.1.2"
   },
