--- a/.github/workflows/journal.yml
+++ b/.github/workflows/journal.yml
@@ -53,3 +53,11 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          REACT_APP_APIKEY: $ {{ enviroment.REACT_APP_APIKEY }}
+          REACT_APP_AUTHDOMAIN: $ {{ enviroment.REACT_APP_AUTHDOMAIN }}
+          REACT_APP_PROJECTID: $ {{ enviroment.REACT_APP_PROJECTID }}
+          REACT_APP_STORAGEBUCKET: $ {{ enviroment.REACT_APP_STORAGEBUCKET }}
+          REACT_APP_MESSAGINGSENDERID: $ {{ enviroment.REACT_APP_MESSAGINGSENDERID }}
+          REACT_APP_APPID: $ {{ enviroment.REACT_APP_APPID }}
+          
+          
