--- a/.github/workflows/journal.yml
+++ b/.github/workflows/journal.yml
@@ -53,11 +53,11 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          REACT_APP_APIKEY: $ {{ env.REACT_APP_APIKEY }}
-          REACT_APP_AUTHDOMAIN: $ {{ env.REACT_APP_AUTHDOMAIN }}
-          REACT_APP_PROJECTID: $ {{ env.REACT_APP_PROJECTID }}
-          REACT_APP_STORAGEBUCKET: $ {{ env.REACT_APP_STORAGEBUCKET }}
-          REACT_APP_MESSAGINGSENDERID: $ {{ env.REACT_APP_MESSAGINGSENDERID }}
-          REACT_APP_APPID: $ {{ env.REACT_APP_APPID }}
+          REACT_APP_APIKEY: $ {{ secrets.REACT_APP_APIKEY }}
+          REACT_APP_AUTHDOMAIN: $ {{ secrets.REACT_APP_AUTHDOMAIN }}
+          REACT_APP_PROJECTID: $ {{ secrets.REACT_APP_PROJECTID }}
+          REACT_APP_STORAGEBUCKET: $ {{ secrets.REACT_APP_STORAGEBUCKET }}
+          REACT_APP_MESSAGINGSENDERID: $ {{ secrets.REACT_APP_MESSAGINGSENDERID }}
+          REACT_APP_APPID: $ {{ secrets.REACT_APP_APPID }}
           
           
